bunch of ui changes and more site infrastructure

--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,10 +1,14 @@
-﻿a.
-  Home
-a.
-  Roster
-a. 
-  Alum
-a.
-  Media
-a.
-  Contact
+﻿ul.navbar
+  li
+    a(href='/') HOME
+  li
+    a(href='/roster') ROSTER
+  li
+    a(href='/schedule') SCHEDULE
+  li
+    a(href='/alumni') ALUMNI
+  li
+    a(href='/media') MEDIA
+  li
+    a(href='/contact') CONTACT
+br.clear
