--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,9 +1,51 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color: #272B30
-  color: #c8c8c8
+  padding 50px
+  font 14px Helvetica, sans-serif
+  background-color #272B30
+  color #c8c8c8
+#content
+  margin auto
+  width 66em
 a
-  color: #00B7FF
+  color #ffd800
 h1
-  color: #ffd800
+  color #ffd800
+  font-size 60px
+  font-weight 600
+  margin: 0
+h2
+  font-size 18px
+  font-weight 200
+  margin: 0
+
+
+//navbar styling
+.navbar
+  width 100%
+  list-style-type none
+  margin 0
+  padding 0
+
+.navbar li
+  margin: .5em
+  float left
+  width 10em
+  background-color #ffd800
+
+.navbar a
+  color #272B30
+  text-decoration none
+  display block
+  text-align center
+  font-weight bold
+
+.clear 
+  clear:both;
+  line-height:0;
+
+
+#footer
+  width 100%
+  margin auto
+  font-size small  
+  text-align center
