--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    h1= title
-    include navbar
-    block content
+    #content
+      h1 Mamabird
+      h2 University of Colorado Mens Ultimate Team
+      include navbar
+      block content
+      include footer
     block scripts
