added more views, more styling, and started formatting & adding content

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,4 +1,8 @@
 extends layout
 
 block content
-  p Bla bla bla, this is the contact info
+  p
+  | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
+  a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
+  | . For anything web related please contact 
+  a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
