--- a/views/roster.jade
+++ b/views/roster.jade
@@ -1,4 +1,24 @@
 extends layout
 
 block content
-  p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  #years
+    ul.roster.years
+      - for (var y in years) {
+        - if (years[y] == year) {
+          li
+          a.selected(href='/roster?year='+years[y])=years[y]
+        - }
+        - else {
+          li
+          a(href='/roster?year='+years[y])=years[y]
+        - }
+      - }
+  #players
+    ul.roster.players
+      - for (var p in players) {
+        - var player = players[p];
+        - var text = player.Number + '\t' + player.Name + '\t' + player.Year;
+        li= text
+      - }
+    
+
