--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -3,10 +3,13 @@ body
   font 14px Helvetica, sans-serif
   background-color #272B30
   color #c8c8c8
-#content
   margin auto
   width 66em
+
+#content
+  min-height 40em
 a
+  text-decoration none
   color #ffd800
 h1
   color #ffd800
@@ -17,6 +20,8 @@ h2
   font-size 18px
   font-weight 200
   margin: 0
+hr
+  border-color #ffd800
 
 
 //navbar styling
@@ -34,7 +39,6 @@ h2
 
 .navbar a
   color #272B30
-  text-decoration none
   display block
   text-align center
   font-weight bold
@@ -43,6 +47,28 @@ h2
   clear:both;
   line-height:0;
 
+//roster styling
+.roster
+  width 100%
+  list-style-type none
+  margin 0
+  padding 0
+  display block
+#years
+  clear both
+.years li
+  display inline
+  margin: .5em
+.players li
+  margin: .5em
+.roster a
+  color #c8c8c8
+  font-weight bold
+a.selected
+  color #ffd800
+  font-weight bold
+.roster a:hover
+  color #ffd800
 
 #footer
   width 100%
