--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,10 +4,12 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    #content
+    #header
       h1 Mamabird
       h2 University of Colorado Mens Ultimate Team
       include navbar
+    #content
       block content
+    #footer
       include footer
     block scripts
