Worked on roster page...works locally now just gotta hook it up to azure db

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -60,6 +60,7 @@ hr
   display inline
   margin: .5em
 .players li
+  width 100%
   margin: .5em
 .roster a
   color #c8c8c8
@@ -69,7 +70,17 @@ a.selected
   font-weight bold
 .roster a:hover
   color #ffd800
-
+.small
+  display inline-block
+  width 4em
+.medium
+  display inline-block
+  width 7em
+.large
+  display inline-block
+  width 11em
+.column
+  color #ffd800
 #footer
   width 100%
   margin auto
