--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -6,7 +6,7 @@
   li
     a(href='/schedule') SCHEDULE
   li
-    a(href='/alumni') ALUMNI
+    a(href='/merch') MERCH
   li
     a(href='/media') MEDIA
   li
