--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,8 +1,10 @@
 extends layout
 
 block content
-  p
-  | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
-  a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
-  | . For anything web related please contact 
-  a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
+  div.container
+    p
+    | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
+    a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
+    | . For anything web related please contact 
+    a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
+    |.
