--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,6 @@
-﻿ul.navbar
+﻿h1 Mamabird
+h2 University of Colorado Mens Ultimate Team
+ul.navbar
   li
     a(href='/') HOME
   li
@@ -12,3 +14,5 @@
   li
     a(href='/contact') CONTACT
 br.clear
+hr
+
