--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     #header
-      h1 Mamabird
-      h2 University of Colorado Mens Ultimate Team
-      include navbar
+      include header
     #content
       block content
     #footer
