--- a/views/media.jade
+++ b/views/media.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  p
-    a(href='https://www.youtube.com/watch?v=D-RJQs0U2FI') #MICKLEMANIA
-  p
-    a(href='http://vimeo.com/1012004') Jolian for Callahan
+  div.container
+    p
+      a(href='https://www.youtube.com/watch?v=D-RJQs0U2FI') #MICKLEMANIA
+    p
+      a(href='http://vimeo.com/1012004') Jolian for Callahan
