--- a/views/page.jade
+++ b/views/page.jade
@@ -1,8 +1,6 @@
-extends layout
+﻿extends layout
 
 block content
-  - var posts = getPosts(0,5)
-  - var page  = 1
   - each post in posts
     include postSnippet
 
