--- a/views/roster.jade
+++ b/views/roster.jade
@@ -1,44 +1,43 @@
 extends layout
 
 block content
-  #years
-    ul.roster.years
-      - for (var t in teams) {
-        - if (teams[t].Year == year) {
-          li
-          a.selected(href='/roster?year='+teams[t].Year)=teams[t].Year
+  div.roster.container
+    #years
+      ul.roster.years
+        - for (var t in teams) {
+          - if (teams[t].Year == year) {
+            li
+            a.selected(href='/roster?year='+teams[t].Year)=teams[t].Year
+          - }
+          - else {
+            li
+            a(href='/roster?year='+teams[t].Year)=teams[t].Year
+          - }
         - }
-        - else {
-          li
-          a(href='/roster?year='+teams[t].Year)=teams[t].Year
-        - }
-      - }
-  #players
-    ul.roster.players
-      li
-        div.small.column Number
-        div.large.column Name
-        div.medium.column Year
-        div.small.column Exp
-        div.medium.column Major
-        div.small.column Height
-        div.small.column Weight
-        div.large.column High School
-        div.large.column Hometown
-      hr
-      - for (var p in players) {
-        - var player = players[p];
-        - var text = player.Number + '\t' + player.Name + '\t' + player.Year;
+    #players
+      ul.roster.players
         li
-          div.small=player.Number
-          div.large=player.Name
-          div.medium=player.Year
-          div.small=player.Experience
-          div.medium=player.Major
-          div.small=player.Height
-          div.small=player.Weight
-          div.large=player.HighSchool
-          div.large=player.Hometown
-      - }
+          div.medium.column Number
+          div.large.column Name
+          div.medium.column Year
+          div.medium.column Experience
+          //div.medium.column Major
+          div.medium.column Height
+          div.medium.column Weight
+          //div.large.column High School
+          //div.large.column Hometown
+        - for (var p in players) {
+          - var player = players[p];
+          li
+            div.medium=player.Number
+            div.large=player.Name
+            div.medium=player.Year
+            div.medium=player.Experience
+            //div.medium=player.Major
+            div.medium=player.Height
+            div.medium=player.Weight
+            //div.large=player.HighSchool
+            //div.large=player.Hometown
+        - }
     
 
