added begingings of player page still needs db backing work

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -64,15 +64,14 @@ hr
 .years li
   display inline
   margin: .5em
+  font-weight bold
 .players li
   width 100%
   margin: .5em
 .roster a
   color #c8c8c8
-  font-weight bold
 a.selected
   color #ffd800
-  font-weight bold
 .roster a:hover
   color #ffd800
 .small
@@ -85,6 +84,8 @@ a.selected
   display inline-block
   width 11em
 .column
+  color #ffd800
+.captain
   color #ffd800
 
 //blog post styleing
