more work on the player page, an image gets showed now if it exists (need to handle not found case)

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -25,6 +25,14 @@ h2
 hr
   border-color #ffd800
 
+//player page
+div.player
+  display inline-block
+  vertical-align top
+div.player.image
+  margin-left 10em
+img
+  max-width 33em
 
 //navbar styling
 .navbar
