added lightbox for video viewing & removed unccessary roster code

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -39,7 +39,7 @@ img
   width 100%
   list-style-type none
   margin 0
-  padding 0
+  padding 1em 0 0 0
 
 .navbar li
   margin: .5em
@@ -59,7 +59,7 @@ img
 
 //roster styling
 .roster.container
-  width auto
+
 .roster
   list-style-type none
   margin-left auto
