fixing an incorrect label

--- a/views/media.jade
+++ b/views/media.jade
@@ -13,7 +13,7 @@ block content
     p
       a.popup-vimeo(href='http://vimeo.com/9357048') Beau Jumps Over a Guy
     p
-      a.popup-vimeo(href='http://vimeo.com/1041416') Beau Jumps Over a Guy
+      a.popup-vimeo(href='http://vimeo.com/1041416') Rabbit
     p
       a.popup-vimeo(href='http://vimeo.com/4323896') Nationals 2008
     p
