--- a/views/player.jade
+++ b/views/player.jade
@@ -20,3 +20,6 @@ block content
         - } 
     div.player.image
       img(src=image)
+block scripts
+  link(rel='stylesheet', href='/stylesheets/player.css')
+
