--- a/views/postSnippet.jade
+++ b/views/postSnippet.jade
@@ -1,5 +1,5 @@
-﻿div.post.container
-  h2
+﻿div.post.spaceBelow
+  h2.postTitle
     a(href=post.url)
       = post.title
   span.blog.date #{post.date.getMonth()+1}.#{post.date.getDate()}.#{post.date.getFullYear()}
