--- a/views/roster.jade
+++ b/views/roster.jade
@@ -47,5 +47,8 @@ block content
         - }
     span.captain * 
     span denotes captain
+block scripts
+  link(rel='stylesheet', href='/stylesheets/roster.css')
+
     
 
