updated favicon and switched from charcol to black background

--- a/public/stylesheets/shared.styl
+++ b/public/stylesheets/shared.styl
@@ -1,7 +1,7 @@
 body
   padding 50px
   font 14px Helvetica, sans-serif
-  background-color #272B30
+  background-color #000000 //#272B30
   color #c8c8c8
   margin auto
   width 66em
@@ -38,7 +38,7 @@ hr
   background-color #ffd800
 
 .navbar a
-  color #272B30
+  color #000000 //#272B30
   display block
   text-align center
   font-weight bold
