--- a/views/header.jade
+++ b/views/header.jade
@@ -1,5 +1,8 @@
-﻿h1 Mamabird
-h2 University of Colorado Mens Ultimate Team
+﻿div
+  h1 Mamabird
+  h2 University of Colorado Mens Ultimate Team
+div
+  //img(src='/images/yellowbird.png')
 ul.navbar
   li
     a(href='/') HOME
