--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/shared.css')
+    link(rel='shortcut icon', href='/images/bird.ico')
   body
     #header
       include header
