--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px Helvetica, sans-serif;
-  background-color: #272b30;
+  background-color: #000;
   color: #c8c8c8;
   margin: auto;
   width: 66em;
@@ -9,6 +9,7 @@ body {
 .container {
   margin-top: 2em;
   margin-bottom: 2em;
+  padding-right: 2em;
 }
 a {
   text-decoration: none;
@@ -28,16 +29,6 @@ h2 {
 hr {
   border-color: #ffd800;
 }
-div.player {
-  display: inline-block;
-  vertical-align: top;
-}
-div.player.image {
-  margin-left: 10em;
-}
-img {
-  max-width: 33em;
-}
 .navbar {
   width: 100%;
   list-style-type: none;
@@ -51,7 +42,7 @@ img {
   background-color: #ffd800;
 }
 .navbar a {
-  color: #272b30;
+  color: #000;
   display: block;
   text-align: center;
   font-weight: bold;
@@ -59,17 +50,6 @@ img {
 .clear {
   clear: both;
   line-height: 0;
-}
-.blog.date {
-  font-style: italic;
-  font-size: small;
-}
-ul.blog {
-  padding: 0em;
-}
-li.blog {
-  display: inline-block;
-  list-style-type: none;
 }
 #footer {
   width: 100%;
