added image and re added yellow to captain asterick

--- a/views/roster.jade
+++ b/views/roster.jade
@@ -39,7 +39,7 @@ block content
               div.medium=player.Number
               div.large=player.Name
                 if player.Captain
-                  span.captain  *
+                  span.yellow  *
               div.medium=player.Year
               div.medium=ordinal
               div.medium=player.Height
