added social media icons!

--- a/views/info.jade
+++ b/views/info.jade
@@ -8,3 +8,14 @@ block content
     | . For anything web related please contact 
     a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
     |.
+    p
+      a(href='https://www.facebook.com/pages/University-of-Colorado-Mamabird/361160030582581', target='_blank')
+        img.socialIcons(src='/images/social/facebook.png')
+      a(href='http://twitter.com/cumamabird', target='_blank')
+        img.socialIcons(src='/images/social/twitter.png')
+      a(href='http://vimeo.com/search?q=mamabird', target='_blank')
+        img.socialIcons(src='/images/social/vimeo.png')
+      a(href='https://www.youtube.com/channel/UCATRUV32kKXzsLUQvxScCjg', target='_blank')
+        img.socialIcons(src='/images/social/youtube.png')
+block scripts
+  link(rel='stylesheet', href='/stylesheets/info.css')
