-added schedule back to 2010 season and allowed for "W-L" to be a properly handled score

--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -27,7 +27,7 @@ block content
         -   if (game.Score1 == 'W') {
         -     color = 'green'
         -   }
-        -   else if (game.Score1 == 'F') {
+        -   else if (game.Score1 == 'F' || game.Score1 == 'L') {
         -     color = 'red'
         -   }
         -   else if (Number(game.Score1) < Number(game.Score2)) {
