--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -1,3 +1,6 @@
+html {
+  overflow-y: scroll;
+}
 body {
   padding: 50px;
   font: 14px Helvetica, sans-serif;
@@ -13,6 +16,9 @@ body {
 }
 a {
   text-decoration: none;
+  color: #ffd800;
+}
+.yellow {
   color: #ffd800;
 }
 h1 {
