added a few posts and updated the css for images in posts

--- a/views/info.jade
+++ b/views/info.jade
@@ -3,9 +3,13 @@ extends layout
 block content
   div.container
     p
+      | Current players can fill out excuse forms 
+      a(href='http://form.jotform.us/form/32474906500148', target='_blank') here
+      |.
+    p
     | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
     a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
-    | . For anything web related please contact 
+    | . For anything related to the website please contact 
     a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
     |.
     p
