--- a/public/stylesheets/blog.styl
+++ b/public/stylesheets/blog.styl
@@ -25,3 +25,8 @@ li.blog
   font-size x-large
 .tags
   font-size small
+.post img
+  display block
+  margin-left auto
+  margin-right auto
+  max-width 100%
