--- a/views/info.jade
+++ b/views/info.jade
@@ -3,15 +3,18 @@ extends layout
 block content
   div.container
     p
-      | Current players can fill out excuse forms 
-      a(href='http://form.jotform.us/form/32474906500148', target='_blank') here
-      |.
+        | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
+        a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
+        | . For anything related to the website please contact 
+        a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
+        |. 
     p
-    | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
-    a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
-    | . For anything related to the website please contact 
-    a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
-    |.
+        | Current players can fill out excuse forms 
+        a(href='http://form.jotform.us/form/32474906500148', target='_blank') here 
+        | as well as sign up to track their workouts with the rest of Mamabird using the  
+        a(href='http://workoutlogthing.com', target='_blank') workout log
+        |. Sign up for an account and then email the captains list for the password to our private group.
+
     p
       a(href='https://www.facebook.com/pages/University-of-Colorado-Mamabird/361160030582581', target='_blank')
         img.socialIcons(src='/images/social/facebook.png')
