changed some info on the wording page and added a pdf of the new player form

--- a/views/info.jade
+++ b/views/info.jade
@@ -5,15 +5,20 @@ block content
     p
         | If you are interested in playing with Mamabird or getting in touch with the captains and coaches please contact them at 
         a(href="mailto:mamabird-captains@lists.colorado.edu") mamabird-captains@lists.colorado.edu
-        | . For anything related to the website please contact 
-        a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
-        |. 
+        | . Anyone interested in playing this upcoming season (new and returning) need to fill out the  
+        a(href='pdfs/player-info-2015.pdf', target='_blank') player info form 
+        | and turn it in to a captain. 
     p
         | Current players can fill out excuse forms 
         a(href='http://form.jotform.us/form/32474906500148', target='_blank') here 
         | as well as sign up to track their workouts with the rest of Mamabird using the  
         a(href='http://workoutlogthing.com', target='_blank') workout log
         |. Sign up for an account and then email the captains list for the password to our private group.
+
+    p
+        | If you have any issues/questions related to the website or are an alum who wants to provide info/images for the roster archive please contact the webmaster at  
+        a(href="mailto:bubernak@colorado.edu") bubernak@colorado.edu
+        |. 
 
     p
       a(href='https://www.facebook.com/pages/University-of-Colorado-Mamabird/361160030582581', target='_blank')
