changed workout log to be using our own link

--- a/views/info.jade
+++ b/views/info.jade
@@ -12,7 +12,7 @@ block content
         | Current players can fill out excuse forms 
         a(href='http://form.jotform.us/form/32474906500148', target='_blank') here 
         | as well as sign up to track their workouts with the rest of Mamabird using the  
-        a(href='http://workoutlogthing.com', target='_blank') workout log
+        a(href='http://workout.mamabird.com', target='_blank') workout log
         |. Sign up for an account and then email the captains list for the password to our private group.
 
     p
